--- a/pages/services.html
+++ b/pages/services.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="../images/nav_logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mohtawa Services - Web Development, SEO, Social Media Marketing, Mobile Apps, and more.">
@@ -13,18 +14,23 @@
         <div class="container">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <div class="nav-logo-icon">م</div>
-                    <span>Mohtawa</span>
+                    <img src="../images/nav_logo.png" alt="Mohtawa Logo" class="nav-logo-img" />
+                    <span style="color: #6b4c9a;">Mohtawa</span>
                 </div>
-                <ul class="nav-links">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../index.html#about">About</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="team.html">Team</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="clients.html">Clients</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
+                                <button class="nav-toggle" aria-label="Open navigation">
+                                    <span class="bar"></span>
+                                    <span class="bar"></span>
+                                    <span class="bar"></span>
+                                </button>
+                                <ul class="nav-links">
+                                        <li><a href="../index.html">Home</a></li>
+                                        <li><a href="../index.html#about">About</a></li>
+                                        <li><a href="services.html">Services</a></li>
+                                        <li><a href="team.html">Team</a></li>
+                                        <li><a href="portfolio.html">Portfolio</a></li>
+                                        <li><a href="clients.html">Clients</a></li>
+                                        <li><a href="contact.html">Contact</a></li>
+                                </ul>
             </div>
         </div>
     </nav>
@@ -33,8 +39,8 @@
     <section class="hero" style="padding: 3rem 0 4rem;">
         <div class="container">
             <div style="text-align: center;">
-                <h1 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">Our Services</h1>
-                <p style="font-size: 1.125rem; color: var(--muted-foreground); max-width: 600px; margin: 0 auto;">We provide a comprehensive suite of digital marketing services designed to elevate your brand and drive measurable results.</p>
+                <h1 style="color: white; margin-bottom: 1rem;">Our Services</h1>
+                <p style="font-size: 1.125rem; color: white; max-width: 600px; margin: 0 auto;">We provide a comprehensive suite of digital marketing services designed to elevate your brand and drive measurable results.</p>
             </div>
         </div>
     </section>
@@ -190,7 +196,84 @@
         </div>
     </footer>
 
-    <script src="../js/script.js"></script>
+        <script src="../js/script.js"></script>
+        <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const navToggle = document.querySelector('.nav-toggle');
+            const navLinks = document.querySelector('.nav-links');
+            navToggle.addEventListener('click', function() {
+                navLinks.classList.toggle('nav-open');
+                navToggle.classList.toggle('open');
+            });
+        });
+        </script>
+        <style>
+        .nav-toggle {
+            display: none;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 40px;
+            height: 40px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            z-index: 1001;
+            margin-left: 1rem;
+        }
+        .nav-toggle .bar {
+            width: 28px;
+            height: 3px;
+            background: #6b4c9a;
+            margin: 4px 0;
+            border-radius: 2px;
+            transition: all 0.3s;
+        }
+        .nav-toggle.open .bar:nth-child(1) {
+            transform: translateY(7px) rotate(45deg);
+        }
+        .nav-toggle.open .bar:nth-child(2) {
+            opacity: 0;
+        }
+        .nav-toggle.open .bar:nth-child(3) {
+            transform: translateY(-7px) rotate(-45deg);
+        }
+        @media (max-width: 900px) {
+            .nav-toggle {
+                display: flex;
+            }
+            .nav-links {
+                position: absolute;
+                top: 100%;
+                right: 0;
+                left: 0;
+                background: #fff;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 0;
+                box-shadow: 0 8px 32px rgba(0,0,0,0.08);
+                padding: 0.5rem 0 1rem 0;
+                display: none;
+                z-index: 1000;
+            }
+            .nav-links.nav-open {
+                display: flex;
+            }
+            .nav-links li {
+                width: 100%;
+            }
+            .nav-links a {
+                display: block;
+                width: 100%;
+                padding: 1rem 2rem;
+                color: #6b4c9a;
+                border-bottom: 1px solid #eee;
+            }
+            .nav-links a:last-child {
+                border-bottom: none;
+            }
+        }
+        </style>
 </body>
 <!-- WhatsApp Floating Button -->
 <a href="whatsapp://send?phone=966594420917"><svg viewBox="0 0 32 32" class="whatsapp-ico"><path d=" M19.11 17.205c-.372 0-1.088 1.39-1.518 1.39a.63.63 0 0 1-.315-.1c-.802-.402-1.504-.817-2.163-1.447-.545-.516-1.146-1.29-1.46-1.963a.426.426 0 0 1-.073-.215c0-.33.99-.945.99-1.49 0-.143-.73-2.09-.832-2.335-.143-.372-.214-.487-.6-.487-.187 0-.36-.043-.53-.043-.302 0-.53.115-.746.315-.688.645-1.032 1.318-1.06 2.264v.114c-.015.99.472 1.977 1.017 2.78 1.23 1.82 2.506 3.41 4.554 4.34.616.287 2.035.888 2.722.888.817 0 2.15-.515 2.478-1.318.13-.33.244-.73.244-1.088 0-.058 0-.144-.03-.215-.1-.172-2.434-1.39-2.678-1.39zm-2.908 7.593c-1.747 0-3.48-.53-4.942-1.49L7.793 24.41l1.132-3.337a8.955 8.955 0 0 1-1.72-5.272c0-4.955 4.04-8.995 8.997-8.995S25.2 10.845 25.2 15.8c0 4.958-4.04 8.998-8.998 8.998zm0-19.798c-5.96 0-10.8 4.842-10.8 10.8 0 1.964.53 3.898 1.546 5.574L5 27.176l5.974-1.92a10.807 10.807 0 0 0 16.03-9.455c0-5.958-4.842-10.8-10.802-10.8z" fill-rule="evenodd"></path></svg></a>
