--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -45,6 +45,185 @@
         </div>
     </section>
 
+
+
+
+
+    <!-- Creative Portfolio Section -->
+
+<section class="creative-portfolio-section">
+  <div class="creative-portfolio-intro">
+    <div class="creative-portfolio-title">
+      <h2>Creative Portfolio</h2>
+
+    </div>
+    <div class="creative-portfolio-description">
+      <p>
+        This curated collection showcases our passion for pushing creative boundaries in 3D motion and Explainer Videos.
+        From hyper-realistic renders to stylized narratives, every piece reflects our commitment to innovation, quality, and client success.
+      </p>
+    </div>
+  </div>
+
+  <div class="creative-portfolio-gallery">
+    <!-- Card 1 -->
+    <div class="creative-portfolio-card">
+      <img src="../images/portfolio/3d-reels.jpeg" alt="3D Reels">
+      <h3>3D Reels</h3>
+      <p>
+        <span class="creative-portfolio-link-icon">➔</span>
+        <a href="https://bit.ly/41nbsKS" target="_blank">https://bit.ly/41nbsKS</a>
+      </p>
+    </div>
+
+    <!-- Card 2 -->
+    <div class="creative-portfolio-card">
+      <img src="../images/portfolio/explainer.jpeg" alt="Explainer Videos">
+      <h3>Explainer Videos</h3>
+      <p>
+        <span class="creative-portfolio-link-icon">➔</span>
+        <a href="https://bit.ly/3F2W3YG" target="_blank">https://bit.ly/3F2W3YG</a>
+      </p>
+    </div>
+
+    <!-- Card 3 -->
+    <div class="creative-portfolio-card">
+      <img src="../images/portfolio/saas-demo.jpeg" alt="SaaS Product Demos">
+      <h3>SaaS Product Demos</h3>
+      <p>
+        <span class="creative-portfolio-link-icon">➔</span>
+        <a href="https://bit.ly/3F4UbP0" target="_blank">https://bit.ly/3F4UbP0</a>
+      </p>
+    </div>
+  </div>
+</section>
+
+
+
+    <!-- Featured Projects -->
+<section class="project-section">
+
+
+            <!-- Featured Projects -->
+  <div class="project-content" alt="FMTECH">
+    <!-- Left Text Content -->
+    <div class="project-text">
+      <h2>FMTECH</h2>
+      <a href="https://www.fmtech.sa" target="_blank">www.fmtech.sa</a>
+      <p>
+        Built FMTECH's professional website with an intelligent service booking system and real-time maintenance tracking portal, streamlining their facility management operations.
+      </p>
+    </div>
+
+    <!-- Right Image Content -->
+    <div class="project-image">
+      <img src="../images/portfolio/fmtech-website.png" alt="FMTECH Website Screenshot" class="main-img">
+    </div>
+  </div>
+<br>
+<br>
+
+            <!-- Featured Projects -->
+  <div class="project-content" alt="Adsmart">
+    <!-- Left Text Content -->
+    <div class="project-text">
+      <h2>Adsmart Services</h2>
+      <p>
+        Designed a dynamic portfolio website for Adsmart Services that showcases their marketing expertise, complete with case studies and a lead-capture system that boosted client inquiries by 60%.
+      </p>
+    </div>
+
+    <!-- Right Image Content -->
+    <div class="project-image">
+      <img src="../images/portfolio/adsmart-website.png" alt="Adsmart Website Screenshot" class="main-img">
+    </div>
+  </div>
+<br>
+<br>
+
+
+            <!-- Featured Projects -->
+  <div class="project-content" alt="Crucial">
+    <!-- Left Text Content -->
+    <div class="project-text">
+      <h2>Crucial Crew</h2>
+      <a href="https://www.crucialcrew.com" target="_blank">www.crucialcrew.com</a>
+      <p>
+        Crafted Crucial Crew's high-energy fitness website with class booking integration and membership management, resulting in 40% more sign-ups.
+      </p>
+    </div>
+
+    <!-- Right Image Content -->
+    <div class="project-image">
+      <img src="../images/portfolio/crucial-crew-website.png" alt="Crucial Website Screenshot" class="main-img">
+    </div>
+  </div>
+<br>
+<br>
+
+            <!-- Featured Projects -->
+  <div class="project-content" alt="Tayf Aziz">
+    <!-- Left Text Content -->
+    <div class="project-text">
+      <h2>Tayf Aziz</h2>
+      <a href="https://www.tayfaziz.com" target="_blank">www.tayfaziz.com</a>
+      <p>
+        Created a warm, welcoming website for Tayf Aziz Center with an intuitive appointment scheduling system, helping parents easily book pediatric rehabilitation services.
+      </p>
+    </div>
+
+    <!-- Right Image Content -->
+    <div class="project-image">
+      <img src="../images/portfolio/tayf-aziz-website.png" alt="Tayf Aziz Website Screenshot" class="main-img">
+    </div>
+  </div>
+<br>
+<br>
+
+        <!-- Featured Projects -->
+  <div class="project-content" alt="SZ">
+    <!-- Left Text Content -->
+    <div class="project-text">
+      <h2>SZ International Trading</h2>
+      <a href="https://www.szinternationaltrading.com" target="_blank">www.szinternationaltrading.com</a>
+      <p>
+        Developed SZ International Trading's automotive showcase platform with advanced vehicle filtering and inquiry features, driving international buyer connections.
+      </p>
+    </div>
+
+    <!-- Right Image Content -->
+    <div class="project-image">
+      <img src="../images/portfolio/SZ.jpeg" alt="SZ Website Screenshot" class="main-img">
+    </div>
+  </div>
+
+
+
+<br>
+<br>
+            <!-- Featured Projects -->
+  <div class="project-content" alt="Hungry Dispo">
+    <!-- Left Text Content -->
+    <div class="project-text">
+      <h2>Hungry Dispo</h2>
+      <a href="https://www.hungrydispo.com" target="_blank">www.hungrydispo.com</a>
+      <p>
+        Designed Hungry Dispo's modern real estate platform with advanced property search and instant inquiry features, doubling lead generation.
+      </p>
+    </div>
+
+    <!-- Right Image Content -->
+    <div class="project-image">
+      <img src="../images/portfolio/hungry.jpeg" alt="Hungry Dispo Website Screenshot" class="main-img">
+    </div>
+  </div>
+
+</section>
+
+
+
+
+
     <!-- Portfolio Projects -->
     <section class="portfolio" style="padding: 3rem 0;">
         <div class="container">
@@ -113,40 +292,9 @@
         </div>
     </section>
 
-    <!-- Case Studies Section -->
-    <section style="padding: 5rem 0; background-color: white;">
-        <div class="container">
-            <h2 class="section-title">Our Approach</h2>
-            <p class="section-subtitle">How we deliver exceptional results for every project</p>
-            
-            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem;">
-                <div style="padding: 2rem; background: linear-gradient(135deg, var(--mohtawa-light), white); border: 1px solid var(--border); border-radius: var(--radius-xl);">
-                    <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">01. Discovery</h3>
-                    <p style="color: var(--muted-foreground); margin-bottom: 0;">We deeply understand your business, goals, and target audience through comprehensive research and consultation.</p>
-                </div>
-                <div style="padding: 2rem; background: linear-gradient(135deg, var(--mohtawa-light), white); border: 1px solid var(--border); border-radius: var(--radius-xl);">
-                    <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">02. Strategy</h3>
-                    <p style="color: var(--muted-foreground); margin-bottom: 0;">We develop customized strategies that align with your objectives and leverage market opportunities.</p>
-                </div>
-                <div style="padding: 2rem; background: linear-gradient(135deg, var(--mohtawa-light), white); border: 1px solid var(--border); border-radius: var(--radius-xl);">
-                    <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">03. Execution</h3>
-                    <p style="color: var(--muted-foreground); margin-bottom: 0;">Our expert team brings strategies to life with precision, creativity, and attention to detail.</p>
-                </div>
-                <div style="padding: 2rem; background: linear-gradient(135deg, var(--mohtawa-light), white); border: 1px solid var(--border); border-radius: var(--radius-xl);">
-                    <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">04. Optimization</h3>
-                    <p style="color: var(--muted-foreground); margin-bottom: 0;">We continuously monitor, analyze, and optimize campaigns to maximize results and ROI.</p>
-                </div>
-                <div style="padding: 2rem; background: linear-gradient(135deg, var(--mohtawa-light), white); border: 1px solid var(--border); border-radius: var(--radius-xl);">
-                    <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">05. Reporting</h3>
-                    <p style="color: var(--muted-foreground); margin-bottom: 0;">We provide transparent, detailed reports that show exactly how your investment is performing.</p>
-                </div>
-                <div style="padding: 2rem; background: linear-gradient(135deg, var(--mohtawa-light), white); border: 1px solid var(--border); border-radius: var(--radius-xl);">
-                    <h3 style="color: var(--mohtawa-dark-purple); margin-bottom: 1rem;">06. Growth</h3>
-                    <p style="color: var(--muted-foreground); margin-bottom: 0;">We focus on sustainable growth and long-term success for your business and brand.</p>
-                </div>
-            </div>
-        </div>
-    </section>
+
+
+
 
     <!-- CTA Section -->
     <section style="padding: 5rem 0; background: linear-gradient(to right, rgba(107, 76, 154, 0.05), rgba(0, 217, 255, 0.05));">
@@ -156,6 +304,7 @@
             <a href="contact.html" class="btn btn-primary">Get Started Today →</a>
         </div>
     </section>
+    
 
     <!-- Footer -->
     <footer>
@@ -188,6 +337,21 @@
                     <h4>Contact</h4>
                     <p>+966 594420917</p>
                     <p>info@mohtawa.sa</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Follow Us</h4>
+                    <div class="social-links">
+                        <a href="https://facebook.com/mohtawa" target="_blank" aria-label="Facebook" class="social-link facebook">
+                            <svg viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                            </svg>
+                        </a>
+                        <a href="https://linkedin.com/company/mohtawa" target="_blank" aria-label="LinkedIn" class="social-link linkedin">
+                            <svg viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.225 0z"/>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
